--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -64,8 +64,12 @@
 			</div>
 			<div class="right">
 				<!-- 内容区域 -->
+				<p>getData方法返回的数据
 				<%var abc=getData(m,2)%>
-				<%=abc%>
+				<%=abc%></p>
+				<p>abx方法返回的数据
+				<%var abx=abx(10,20)%>
+				<%=abx%></p>
 		        <iframe id="content" name="content"  frameborder="0"></iframe>
 			</div>
 		</div>
