添加了解析模板中方法和参数的工具类

--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -65,7 +65,7 @@
 			<div class="right">
 				<!-- 内容区域 -->
 				<p>getData方法返回的数据
-				<%var abc=getData("_m_","_n_",2)%>
+				<%var abc=getData(_m_,_n_,100)%>
 				<%=abc%></p>
 				<p>abx方法返回的数据
 				<%var abx=abx(10,20)%>
