重构了执行模板数据的方法

--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -67,9 +67,21 @@
 				<p>getData方法返回的数据
 				<%var abc=getData(_m_,_n_,100)%>
 				<%=abc%></p>
+
 				<p>abx方法返回的数据
 				<%var abx=abx(10,20)%>
 				<%=abx%></p>
+
+				<p>abxsds方法返回的数据
+				<%var asdsad=abxs(10,20)%>
+				<%=asdsad.a%></p>
+
+				<p>abxsds方法返回的数据
+				<%var dsad=abxsdasdsad(100,200)%>
+				<%=dsad%></p>
+
+
+
 		        <iframe id="content" name="content"  frameborder="0"></iframe>
 			</div>
 		</div>
